--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,8 +14,20 @@
         android:background="?attr/colorPrimary"
         app:titleTextAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
         android:theme="@style/Base.Theme.AppCompat.Light"
-        app:navigationIcon="?attr/homeAsUpIndicator">
+        android:animateLayoutChanges="true"
+        app:navigationIcon="@drawable/ic_code">
     </android.support.v7.widget.Toolbar>
+
+    <ProgressBar
+        android:id="@+id/progressIndicator"
+        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        app:layout_constraintBottom_toBottomOf="@id/toolbar"/>
 
     <FrameLayout
         android:id="@+id/mainFragment"
