Added question details fragment

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,6 @@
 <resources>
     <dimen name="text_margin">16dp</dimen>
     <dimen name="text_margin_small">6dp</dimen>
+    <dimen name="text_margin_subhead">8dp</dimen>
+    <dimen name="icon_avatar">48dp</dimen>
 </resources>
