--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,17 +6,9 @@
     android:layout_height="match_parent"
     tools:context=".view.MainActivity">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        app:title="@string/app_name"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
-        app:titleTextAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
-        android:theme="@style/Base.Theme.AppCompat.Light"
-        android:animateLayoutChanges="true"
-        app:navigationIcon="@drawable/ic_code">
-    </android.support.v7.widget.Toolbar>
+    <include
+        android:id="@+id/toolbar_view"
+        layout="@layout/include_toolbar" />
 
     <ProgressBar
         android:id="@+id/progressIndicator"
@@ -26,8 +18,8 @@
         android:indeterminate="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar"
-        app:layout_constraintBottom_toBottomOf="@id/toolbar"/>
+        app:layout_constraintTop_toBottomOf="@+id/toolbar_view"
+        app:layout_constraintBottom_toBottomOf="@id/toolbar_view"/>
 
     <FrameLayout
         android:id="@+id/mainFragment"
@@ -36,6 +28,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+        app:layout_constraintTop_toBottomOf="@+id/toolbar_view" />
 
 </android.support.constraint.ConstraintLayout>
