--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,6 @@
     <dimen name="text_margin_small">6dp</dimen>
     <dimen name="text_margin_subhead">8dp</dimen>
     <dimen name="icon_avatar">48dp</dimen>
+
+    <dimen name="toolbar_elevation">4dp</dimen>
 </resources>
