Implemented UI for user's bookmarks

--- a/app/src/main/res/layout-v21/include_toolbar.xml
+++ b/app/src/main/res/layout-v21/include_toolbar.xml
@@ -10,5 +10,6 @@
     android:theme="@style/Base.Theme.AppCompat.Light"
     android:animateLayoutChanges="true"
     app:navigationIcon="@drawable/ic_code"
+    app:contentInsetStartWithNavigation="0dp"
     android:elevation="@dimen/toolbar_elevation"
     tools:showIn="@layout/activity_main"/>
