--- a/app/src/main/res/layout/include_toolbar.xml
+++ b/app/src/main/res/layout/include_toolbar.xml
@@ -10,4 +10,5 @@
     android:theme="@style/Base.Theme.AppCompat.Light"
     android:animateLayoutChanges="true"
     app:navigationIcon="@drawable/ic_code"
+    app:contentInsetStartWithNavigation="0dp"
     tools:showIn="@layout/activity_main"/>
