--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,8 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorGreyBackground">#e1e1e1</color>
+
     <color name="ic_launcher_background">#DE8C11</color>
+    <color name="widget_background">#91ffffff</color>
+    <color name="widget_frame_background">#cb080808</color>
 </resources>
