--- a/app/src/main/res/layout/app_widget_item.xml
+++ b/app/src/main/res/layout/app_widget_item.xml
@@ -4,18 +4,17 @@
     android:id="@+id/widgetItem"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="@dimen/text_margin_small"
-    android:orientation="horizontal">
+    android:padding="@dimen/text_margin_small">
 
     <TextView
         android:id="@+id/hotTitle"
-        style="@style/TextAppearance.AppCompat.Small"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:layout_toStartOf="@id/infoBlock"
+        android:layout_marginEnd="@dimen/text_margin"
         android:ellipsize="end"
-        android:theme="@style/AppTheme.Widget.Title"
+        style="@style/AppTheme.Widget.Title"
         tools:text="@tools:sample/lorem" />
 
     <LinearLayout
