Implemented JobDispatcher to update widget

--- a/app/src/main/res/layout/app_widget_item.xml
+++ b/app/src/main/res/layout/app_widget_item.xml
@@ -4,17 +4,18 @@
     android:id="@+id/widgetItem"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="@dimen/text_margin_small">
+    android:padding="@dimen/text_margin_small"
+    tools:ignore="UseCompoundDrawables">
 
     <TextView
         android:id="@+id/hotTitle"
+        style="@style/AppTheme.Widget.Title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:layout_toStartOf="@id/infoBlock"
         android:layout_marginEnd="@dimen/text_margin"
+        android:layout_toStartOf="@id/infoBlock"
         android:ellipsize="end"
-        style="@style/AppTheme.Widget.Title"
         tools:text="@tools:sample/lorem" />
 
     <LinearLayout
@@ -24,24 +25,45 @@
         android:layout_alignParentEnd="true"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/hotViews"
+        <!-- There is no good way to scale Compound Drawables on API < 23 -->
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:drawableStart="@drawable/ic_eye_small"
-            android:drawablePadding="@dimen/text_margin_small"
-            style="@style/AppTheme.Widget.Small"
-            tools:text="15" />
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/hotComments"
+            <ImageView
+                android:layout_width="@dimen/widget_icon"
+                android:layout_height="@dimen/widget_icon"
+                android:contentDescription="@string/widget_icon_eye"
+                android:src="@drawable/ic_eye" />
+
+            <TextView
+                android:id="@+id/hotViews"
+                style="@style/AppTheme.Widget.Small"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="@dimen/text_margin_small"
+                tools:text="15" />
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            style="@style/AppTheme.Widget.Small"
-            android:drawableStart="@drawable/ic_comment_small"
-            android:drawablePadding="@dimen/text_margin_small"
-            tools:text="564" />
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:layout_width="@dimen/widget_icon"
+                android:layout_height="@dimen/widget_icon"
+                android:contentDescription="@string/widget_icon_comments"
+                android:src="@drawable/ic_comment" />
+
+            <TextView
+                android:id="@+id/hotComments"
+                style="@style/AppTheme.Widget.Small"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="@dimen/text_margin_small"
+                tools:text="564" />
+        </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
