--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,5 @@
     <dimen name="toolbar_elevation">4dp</dimen>
 
     <dimen name="widget_margin">8dp</dimen>
+    <dimen name="widget_icon">12dp</dimen>
 </resources>
