--- a/app/src/main/res/layout/app_widget.xml
+++ b/app/src/main/res/layout/app_widget.xml
@@ -1,7 +1,10 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/widget_background"
+    android:background="@color/widget_background">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="@dimen/widget_margin">
 
@@ -20,3 +23,12 @@
         android:layout_height="match_parent" />
 
 </LinearLayout>
+    <TextView
+        android:id="@+id/widgetRefresh"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:gravity="center"
+        style="@style/AppTheme.Widget.Title"
+        android:text="@string/widget_tap_to_refresh"/>
+</FrameLayout>
