--- a/app/src/main/res/xml/app_widget_info.xml
+++ b/app/src/main/res/xml/app_widget_info.xml
@@ -2,9 +2,9 @@
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
     android:initialKeyguardLayout="@layout/app_widget"
     android:initialLayout="@layout/app_widget"
-    android:minHeight="220dp"
-    android:minWidth="220dp"
-    android:previewImage="@mipmap/ic_launcher"
+    android:minHeight="110dp"
+    android:minWidth="160dp"
+    android:previewImage="@drawable/widget_snapshot"
     android:resizeMode="horizontal|vertical"
-    android:updatePeriodMillis="1800000"
+    android:updatePeriodMillis="0"
     android:widgetCategory="home_screen"/>
