--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -17,6 +17,7 @@
                 android:id="@+id/postVotes"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
                 android:paddingEnd="@dimen/text_margin"
                 android:paddingStart="0dp">
 
